--- a/aw-select.css
+++ b/aw-select.css
@@ -15,7 +15,11 @@
 	height: 40px;
 	line-height: 40px;
 	padding: 0 10px;
+	padding-right: 30px;
 	position: relative;
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
 
 }
 
